# client-examples

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
game-client/: CMakeLists.txt
game-client/assets/atlases/: level1_tiles.json
game-client/assets/collision_shapes/: cat.json  circle.json  frog.json
game-client/assets/materials/: background.json  background_material.json  cat.json  frog.json  frog_material.json  tiles.json  ui.json  ui_colour.json  ui_image.json
game-client/assets/shaders/: font.json  fs_font.sc  fs_ocornut_imgui.sc  fs_sprite.sc  fs_ui_colour.sc  fs_ui_image.sc  ocornut_imgui.json  ocornut_imgui_image.json  sprite_shader_program.json  ui.json  ui_colour.json  ui_image.json  varying.def.sc  vs_font.sc  vs_ocornut_imgui.sc  vs_ocornut_imgui_image.sc  vs_sprite.sc  vs_ui.sc  vs_ui_colour.sc  vs_ui_image.sc
game-client/assets/sprites/: background.json  cat.json  floor.json  frog.json
game-client/assets/tilemaps/: level1.json
game-client/src/: CMakeLists.txt
game-client/src/game-client/: CMakeLists.txt  GameClient.cpp  GameClient.cppm  main.cpp
game-client/src/game-client/camera/: CMakeLists.txt  Camera.cpp  Camera.cppm  CameraController.cpp  CameraController.cppm
game-client/src/game-client/camera/services/: CMakeLists.txt  CameraControllerSystemService.cppm
game-client/src/game-client/camera/systems/: CMakeLists.txt  CameraControllerSystem.cpp  CameraControllerSystem.cppm
game-client/src/game-client/character/: CMakeLists.txt  CatCharacter.cpp  CatCharacter.cppm  Character.cpp  Character.cppm  CharacterController.cpp  CharacterController.cppm  CharacterSpawner.cpp  CharacterSpawner.cppm  FrogCharacter.cpp  FrogCharacter.cppm  FrogCollector.cppm
game-client/src/game-client/character/services/: CMakeLists.txt  CharacterControllerSystemService.cppm  CharacterSpawnerSystemService.cppm  FrogCollectorSystemService.cppm
game-client/src/game-client/character/systems/: CMakeLists.txt  CharacterControllerSystem.cpp  CharacterControllerSystem.cppm  CharacterSpawnerSystem.cpp  CharacterSpawnerSystem.cppm  FrogCollectorSystem.cpp  FrogCollectorSystem.cppm
game-client/src/game-client/level/: CMakeLists.txt  Level1Floor.cpp  Level1Floor.cppm  Level1Scene.cpp  Level1Scene.cppm  LevelBackground.cpp  LevelBackground.cppm
game-client/src/game-client/player/: CMakeLists.txt  Player.cppm  PlayerScore.cppm
game-client/src/game-client/player/services/: CMakeLists.txt  CalculatePlayerScoreSystemService.cppm
game-client/src/game-client/player/systems/: CMakeLists.txt  CalculatePlayerScoreSystem.cpp  CalculatePlayerScoreSystem.cppm
game-client/src/game-client/services/: CMakeLists.txt  GameClientService.cpp  GameClientService.cppm
game-client/src/game-client/ui/: CMakeLists.txt  HUD.cpp  HUD.cppm  MainMenu.cpp  MainMenu.cppm  MainMenuController.cppm
game-client/src/game-client/ui/services/: CMakeLists.txt  HUDControllerSystemService.cppm  MainMenuControllerSystemService.cppm
game-client/src/game-client/ui/systems/: CMakeLists.txt  HUDControllerSystem.cpp  HUDControllerSystem.cppm  MainMenuControllerSystem.cpp  MainMenuControllerSystem.cppm
ports/kangaru/: portfile.cmake
ports/quickjs/: portfile.cmake  vcpkg.json
